Fix events banner looking bad on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -29,13 +29,17 @@ body {
     width: 100%;
     text-align: center;
     height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .page-banner-title {
     color: white;
     text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
     font-size: 5em;
-    padding-top: 0.5em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .page-banner-link {
